cluster/core/storage/storage-class/site-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: hdd-storage-class-service
  namespace: storage
spec:
  selector:
    app: hdd-storage-class-site
  ports:
    - protocol: TCP
      port: 80
