cluster/core/storage/storage-class/site-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: storage
  name: hdd-storage-class-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
spec:
  rules:
    - host: hdd-storage-class.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hdd-storage-class-service
                port:
                  number: 80
